Add Generic Filter

--- a/index.html
+++ b/index.html
@@ -9,21 +9,10 @@
     <div id="main">
         <div id="header"><img src="logo.png" width="50px" height="100%">Vinsol Cart</div>
         <div id="data-content">
-            <div id="sidebar">
-                <h2>Brands</h2>
-                <div id="brands" data-property='brands'>
-                </div>
-                <h2>Color</h2>
-                <div id="colors" data-property='colors'>
-                </div>
-                <div id="available">
-                    <input type="checkbox" name="stock" data-property='available'>Available products
-                </div>
+            <div id="sidebar" data-property="filters">
             </div>
             <div id="content">
-                <div id="products-content" data-property="products">
-
-                </div>
+                <div id="products-content" data-property="products"></div>
             </div>
         </div>
         <div id="footer">Made By Shubham Juneja</div>
@@ -32,5 +21,4 @@
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script type="text/javascript" src="index.js"></script>
 </body>
-
 </html>
