--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </div>
     <link rel="stylesheet" type="text/css" href="index.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script type="text/javascript" src="ajaxrequesthandler.js"></script>
     <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
