--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
                 <div id="products-content" data-property="products"></div>
             </div>
         </div>
+        <div id="pages" data-property="pages">
+        </div>
         <div id="footer">Made By Shubham Juneja</div>
     </div>
     <link rel="stylesheet" type="text/css" href="index.css">
