--- a/index.html
+++ b/index.html
@@ -8,20 +8,26 @@
 <body>
     <div id="main">
         <div id="header"><img src="logo.png" width="50px" height="100%">Vinsol Cart</div>
-        <div id="data-content">
+        <div id="data-content" data-property="grid">
             <div id="sidebar" data-property="filters">
             </div>
             <div id="content">
                 <div id="products-content" data-property="products"></div>
             </div>
-        </div>
-        <div id="pages" data-property="pages">
+            <div id="pages" data-property="pages"></div>
         </div>
         <div id="footer">Made By Shubham Juneja</div>
     </div>
     <link rel="stylesheet" type="text/css" href="index.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script type="text/javascript" src="attributesmap.js"></script>
+    <script type="text/javascript" src="jquery.js"></script>
+    <script type="text/javascript" src="product.js"></script>
     <script type="text/javascript" src="ajaxrequesthandler.js"></script>
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="gridview.js"></script>
+    <script type="text/javascript" src="filtertypes.js"></script>
+    <script type="text/javascript" src="filter.js"></script>
+    <script type="text/javascript" src="filtermanager.js"></script>
+    <script type="text/javascript" src="urlhandler.js"></script>
+    <script type="text/javascript" src="productgrid.js"></script>
 </body>
 </html>
